# SAID

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  PRD.md  README.md  SETUP_SUMMARY.md  TASK_STATUS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: git-workflow.mdc  recursive-development.mdc  state-context.mdc
examples/: .gitkeep
src/said/: __init__.py  builder.py  cli.py  coordinator.py  dag_builder.py  error_collector.py  error_parser.py  git_detector.py  inventory_loader.py  matcher.py  orchestrator.py  parser.py  resolver.py  schema.py  state_store.py  validator.py  variable_dependency_analyzer.py  variable_searcher.py
tests/: __init__.py  test_coordinator.py  test_dag_builder.py  test_git_detector.py  test_matcher.py  test_orchestrator.py  test_parser.py  test_resolver.py  test_schema.py  test_state_store.py  test_validator.py
